# gaugeflow-social-os

./: .env.example  .gitignore  README.md  config.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  scheduler.py
agents/: ceo_controller.py  comment_writer.py  content_writer.py  engagement_finder.py  media_planner.py  platform_operator.py  reply_writer.py  report_writer.py  safety_checker.py
connectors/: ai_provider.py  browser_operator.py  claude_provider.py  facebook_page_api.py  instagram_graph_api.py  linkedin_api.py  openai_provider.py  telegram_bot.py
dashboard/: app.py
dashboard/static/: style.css
dashboard/templates/: action_detail.html  actions.html  base.html  home.html
deploy/: crontab.example  gaugeflow-social-dashboard.service  gaugeflow-social-scheduler.service  gaugeflow-social-telegram.service
memory/: banned_topics.md  brand_voice.md  company_context.md  content_topics.md  engagement_history.json  sam_callahan_voice.md
outputs/: gaua17_initiatives.csv  gaua17_social_os_summary.md  gaua17_weekly_plan.json
src/gaugeflow_social_os/: __init__.py  cli.py  data.py  engine.py  exporters.py  models.py
tests/: conftest.py  test_content_writer.py  test_db.py  test_main_cli_meta.py  test_reply_policy.py  test_safety_checker.py  test_social_os_engine.py  test_social_os_exporters.py
